--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username = root
 spring.datasource.password = 
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = create-drop
+
+security.basic.enabled=false
