--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 email.host = localhost
 email.port = 25
+
+#spring.http.multipart.max-file-size=500KB
+
+spring.thymeleaf.cache = false
+
+#spring.devtools.restart.exclude = templates/**
