Esqueci minha senha e envio de e-mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,18 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 #security.basic.enabled=false
 
-email.host = localhost
-email.port = 25
+#email.host = localhost
+#email.port = 25
 
 #spring.http.multipart.max-file-size=500KB
 
 spring.thymeleaf.cache = false
 
 #spring.devtools.restart.exclude = templates/**
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = projetoanimenote@gmail.com
+spring.mail.password = socialnetwork
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+host = localhost:8080
