Configuração do logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.mail.password = socialnetwork
 spring.mail.properties.mail.smtp.starttls.enable = true
 
 host = localhost:8080
+
+#log
+logging.file = target/animenote.log
+logging.level.br.com.animenote = INFO
+logging.level.br.com.animenote = DEBUG
+logging.level.org.springframework = WARN
+logging.level.org.hibernate = WARN
+logging.level.root = INFO
+logging.level.org.springframework.web = DEBUG
