--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
