--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/db_animenote
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = create-drop
+# spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = none
 
 #security.basic.enabled=false
 
